--- a/style.css
+++ b/style.css
@@ -2,8 +2,290 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
+    user-select: none;
 }
 html,body{
     width: 100%;
     height: 100%;
+}
+
+
+#wrapper
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F7F7F7;
+    position: relative;
+}
+
+#container
+{
+    display: flex;
+    gap: 28px;
+    position: absolute;
+}
+
+/* Buttons to add and navigate cards*/
+#button-container
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    height: 200px;
+    justify-content: center;
+}
+#button-container button{
+    padding: 10px;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-weight: 900;
+    background-color: #fff;
+    box-shadow:1px 1px 5px 1px rgb(226, 225, 225);
+    cursor: pointer;
+}
+
+
+
+#priority-container{
+    width: 10px;
+    height: 200px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+}
+#priority-container .priority-label{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow:1px 1px 5px 1px rgb(226, 225, 225);
+}
+#priority-container .emergency{
+    background-color:maroon;
+}
+#priority-container .important{
+    background-color: #FFBF00;
+}
+#priority-container .urgent{
+    background-color:salmon;
+}
+#priority-container .no-rush{
+    background-color: teal;
+}
+
+/* Reminder Cards*/
+#card-container
+{
+    width: 250px;
+    height: 200px;
+    position: relative;
+}
+
+#card-container .card{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px 10px;
+    box-shadow:1px 1px 5px 1px rgb(226, 225, 225);
+    transition: all .2s cubic-bezier(0.215, 0.610, 0.355, 1); /*Adds animation when cards change position*/
+}
+
+/* For Card Stack Effect */
+#card-container .card:nth-child(1){
+    z-index: 3;
+}
+#card-container .card:nth-child(2){
+    z-index: 2;
+    transform: translateY(10px) scale(0.98);
+    opacity: 0.9;
+}
+#card-container .card:nth-child(3){
+    z-index: 1;
+    transform: translateY(20px) scale(0.96);
+    opacity: 0.7;
+}
+
+#card-container .card img{
+    margin-left: 5px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 50%;
+}
+#card-container .card .card-username{
+    color: #312121;
+    font-size: 18px;
+    font-weight: 700;
+    padding:5px 10px;
+}
+#card-container .card .hometown-div{
+    padding:0px 10px;
+    display: flex;
+    justify-content: space-between;
+}
+#card-container .card .hometown-div span{
+    overflow: hidden;
+    font-size: 14px;
+    font-weight: 200;
+}
+
+#card-container .card .purpose-div{
+    padding:0px 10px;
+    display: flex;
+    justify-content: space-between;
+}
+#card-container .card .purpose-div span{
+    font-size: 14px;
+    font-weight: 200;
+}
+#card-container .card .action-div{
+    margin-top: 5px;
+    padding:5px 10px;
+
+}
+#card-container .card .action-div button{
+    cursor: pointer;
+
+}
+#card-container .card .action-div button:nth-child(1){
+    padding:8px;
+    border: none;
+    width: 70px;
+    border-radius: 20px;
+    color: #F7F7F7;
+    background-color: darkred;
+    font-weight: bold;
+}
+#card-container .card .action-div button:nth-child(2){
+    padding:10px;
+    border: none;
+    border-radius: 10px;
+    background-color: transparent;
+    font-weight: bold;
+}
+
+/* Form Container */
+#form-container
+{
+    display: none;
+    z-index: 100;
+    width: 430px;
+    padding: 20px ;
+    border-radius: 20px;
+    background-color: #fff;
+}
+#form-container h2{
+    padding: 5px ;
+    font-size: 18px;
+    color: #3a3a3a;
+}
+#form-container form{
+    display: flex;
+    flex-direction: column;
+}
+#form-container form .form-element{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+}
+#form-container form .form-element input{
+    border: 0.5px solid rgb(235, 234, 234);
+    margin: 5px 0px;
+    padding: 10px;
+    border-radius: 10px;
+    outline: none;
+}
+#form-container form .form-element input:focus{
+    border: .5px solid black;
+}
+#form-container form .form-element label{
+    color: #3a3a3a;
+    font-size: 16px;
+    font-weight: 400;
+}
+#form-container form h4{
+    padding: 5px ;
+    font-size: 17px;
+    font-weight: 300;
+    color: #3a3a3a;
+}
+#form-container form .category{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px ;
+}
+#form-container form .category div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3px;
+    font-size: 14px;
+    border: 1px solid black;
+    padding: 5px;
+    border-radius: 20px;
+}
+#form-container form .category div:nth-child(1){
+    color: maroon;
+    border: 1px solid maroon;
+}
+#form-container form .category div:nth-child(2){
+    color: #FFBF00;
+    border: 1px solid #FFBF00;
+}
+#form-container form .category div:nth-child(3){
+    color: salmon;
+    border: 1px solid salmon;
+}
+#form-container form .category div:nth-child(4){
+    color: teal;
+    border: 1px solid teal;
+}
+#form-container form .category div input[type="radio"],label{
+    cursor: pointer;
+}
+#form-container form .category div input[type="radio"]{
+    accent-color: maroon;
+}
+#form-container form input[type="submit"]{
+    width: 90%;
+    margin: 10px;
+    padding: 8px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background-color: #2a2a2a;
+    color: #fff;
+    cursor: pointer;
+}
+#form-container form button
+{
+    width: 90%;
+    margin: 0px 10px;
+    padding: 8px;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    background-color: maroon;
+    color: #fff;
+    cursor: pointer;
+}
+/* Adjusting Layout for mobile devices(Only Basic Adjustments)*/
+@media (max-width:600px) {
+    #form-container{
+        width: 90%;
+    }
+    #container {
+        gap: 15px;
+    }
 }
